fix: Update dependencies and improve code formatting in various files